// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a section 1`] = `
<div
  className="section-container"
>
  <div
    className="globe"
  >
    <a
      href="https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=13502"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="link"
        src="file"
      />
    </a>
  </div>
  <div
    className="mobile-section-title"
  >
    Jennifer Shire @ 9:50 am
  </div>
  <table>
    <tbody>
      <tr
        className="firstRow"
      >
        <td
          className="firstColumn"
        >
          CRN
        </td>
        <td
          className="secondColumn"
        >
          13502
        </td>
      </tr>
      <tr>
        <td
          className="firstColumn"
        >
          Profs
        </td>
        <td
          className="secondColumn"
        >
          Jennifer Anne Shire
        </td>
      </tr>
      <tr
        style={
          Object {
            "display": false,
          }
        }
      >
        <td
          className="firstColumn"
        >
          Place
        </td>
        <td
          className="secondColumn"
        >
          <LocationLinks
            locations={
              Array [
                "Snell Engineering Center 108",
              ]
            }
          />
        </td>
      </tr>
      <tr
        style={
          Object {
            "display": false,
          }
        }
      >
        <td
          className="firstColumn"
        >
          Times
        </td>
        <td
          className="secondColumn"
        >
          9:50 - 11:30 am
        </td>
      </tr>
      <tr
        style={
          Object {
            "display": false,
          }
        }
      >
        <td
          className="firstColumn"
        >
          Days
        </td>
        <td
          className="secondColumn"
        >
          <WeekdayBoxes
            section={
              Section {
                "classId": "1210",
                "crn": "13502",
                "host": "neu.edu",
                "lastUpdateTime": 1511131914029,
                "meetings": Array [
                  Meeting {
                    "endDate": "2017-12-07T00:00:00.000Z",
                    "startDate": "2017-09-07T00:00:00.000Z",
                    "times": Array [
                      Array [
                        Object {
                          "end": "1970-01-06T11:30:00.000Z",
                          "start": "1970-01-06T09:50:00.000Z",
                        },
                      ],
                    ],
                    "where": "Snell Engineering Center 108",
                  },
                ],
                "online": false,
                "profs": Array [
                  "Jennifer Anne Shire",
                ],
                "seatsCapacity": 19,
                "seatsRemaining": 0,
                "subject": "CS",
                "termId": "201810",
                "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=13502",
                "waitCapacity": 0,
                "waitRemaining": 0,
              }
            }
          />
        </td>
      </tr>
      <tr
        style={
          Object {
            "display": false,
          }
        }
      >
        <td
          className="firstColumn"
        >
          Seats
        </td>
        <td
          className="secondColumn"
        >
          0
          /
          19
           Available
        </td>
      </tr>
      <tr
        style={
          Object {
            "display": "none",
          }
        }
      >
        <td
          className="firstColumn"
        >
          Notifs
        </td>
        <td
          className="secondColumn"
        >
          <NotifCheckBox
            section={
              Section {
                "classId": "1210",
                "crn": "13502",
                "host": "neu.edu",
                "lastUpdateTime": 1511131914029,
                "meetings": Array [
                  Meeting {
                    "endDate": "2017-12-07T00:00:00.000Z",
                    "startDate": "2017-09-07T00:00:00.000Z",
                    "times": Array [
                      Array [
                        Object {
                          "end": "1970-01-06T11:30:00.000Z",
                          "start": "1970-01-06T09:50:00.000Z",
                        },
                      ],
                    ],
                    "where": "Snell Engineering Center 108",
                  },
                ],
                "online": false,
                "profs": Array [
                  "Jennifer Anne Shire",
                ],
                "seatsCapacity": 19,
                "seatsRemaining": 0,
                "subject": "CS",
                "termId": "201810",
                "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=13502",
                "waitCapacity": 0,
                "waitRemaining": 0,
              }
            }
          />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`should render another section w/ checkboxes 1`] = `
<div
  className="section-container"
>
  <div
    className="globe"
  >
    <a
      href="https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=14404"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="link"
        src="file"
      />
    </a>
  </div>
  <div
    className="mobile-section-title"
  >
    Jennifer Shire @ 11:45 am
  </div>
  <table>
    <tbody>
      <tr
        className="firstRow"
      >
        <td
          className="firstColumn"
        >
          CRN
        </td>
        <td
          className="secondColumn"
        >
          14404
        </td>
      </tr>
      <tr>
        <td
          className="firstColumn"
        >
          Profs
        </td>
        <td
          className="secondColumn"
        >
          Jennifer Anne Shire
        </td>
      </tr>
      <tr
        style={
          Object {
            "display": false,
          }
        }
      >
        <td
          className="firstColumn"
        >
          Place
        </td>
        <td
          className="secondColumn"
        >
          <LocationLinks
            locations={
              Array [
                "Ryder Hall 431",
              ]
            }
          />
        </td>
      </tr>
      <tr
        style={
          Object {
            "display": false,
          }
        }
      >
        <td
          className="firstColumn"
        >
          Times
        </td>
        <td
          className="secondColumn"
        >
          11:45 - 1:25 pm
        </td>
      </tr>
      <tr
        style={
          Object {
            "display": false,
          }
        }
      >
        <td
          className="firstColumn"
        >
          Days
        </td>
        <td
          className="secondColumn"
        >
          <WeekdayBoxes
            section={
              Section {
                "classId": "1210",
                "crn": "14404",
                "host": "neu.edu",
                "lastUpdateTime": 1511131914065,
                "meetings": Array [
                  Meeting {
                    "endDate": "2017-12-07T00:00:00.000Z",
                    "startDate": "2017-09-07T00:00:00.000Z",
                    "times": Array [
                      Array [
                        Object {
                          "end": "1970-01-06T13:25:00.000Z",
                          "start": "1970-01-06T11:45:00.000Z",
                        },
                      ],
                    ],
                    "where": "Ryder Hall 431",
                  },
                ],
                "online": false,
                "profs": Array [
                  "Jennifer Anne Shire",
                ],
                "seatsCapacity": 19,
                "seatsRemaining": 0,
                "subject": "CS",
                "termId": "201810",
                "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=14404",
                "waitCapacity": 0,
                "waitRemaining": 0,
              }
            }
          />
        </td>
      </tr>
      <tr
        style={
          Object {
            "display": false,
          }
        }
      >
        <td
          className="firstColumn"
        >
          Seats
        </td>
        <td
          className="secondColumn"
        >
          0
          /
          19
           Available
        </td>
      </tr>
      <tr
        style={
          Object {
            "display": false,
          }
        }
      >
        <td
          className="firstColumn"
        >
          Notifs
        </td>
        <td
          className="secondColumn"
        >
          <NotifCheckBox
            section={
              Section {
                "classId": "1210",
                "crn": "14404",
                "host": "neu.edu",
                "lastUpdateTime": 1511131914065,
                "meetings": Array [
                  Meeting {
                    "endDate": "2017-12-07T00:00:00.000Z",
                    "startDate": "2017-09-07T00:00:00.000Z",
                    "times": Array [
                      Array [
                        Object {
                          "end": "1970-01-06T13:25:00.000Z",
                          "start": "1970-01-06T11:45:00.000Z",
                        },
                      ],
                    ],
                    "where": "Ryder Hall 431",
                  },
                ],
                "online": false,
                "profs": Array [
                  "Jennifer Anne Shire",
                ],
                "seatsCapacity": 19,
                "seatsRemaining": 0,
                "subject": "CS",
                "termId": "201810",
                "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=14404",
                "waitCapacity": 0,
                "waitRemaining": 0,
              }
            }
          />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
